--- a/index.ipynb
+++ b/index.ipynb
@@ -617,6 +617,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
+    "    return y_valu\n",
     "    pass"
    ]
   },
