--- a/index.ipynb
+++ b/index.ipynb
@@ -617,7 +617,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    return y_values[1]-x-\n",
+    "    return y_values[0]-x_values[0]*\n",
     "    pass"
    ]
   },
