automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,12 +612,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    return y_values[0]-x_values[0]*\n",
+    "    return y_values[0]-x_values[0]*slope(x_values, y_values)\n",
     "    pass"
    ]
   },
