--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    return y_intercept(x_values, y_values)\n",
+    "    return {}\n",
     "    pass"
    ]
   },
