--- a/index.ipynb
+++ b/index.ipynb
@@ -672,20 +672,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    return {'b': y_intercept(x_values, y_values), 'm': slope()}\n",
+    "    return {'b': y_intercept(x_values, y_values), 'm': slope(x_values, y_values)}\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b': 10.0, 'm': 1.95}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_starting_line([0, 200, 400], [10, 400, 700]) # {'b': 10.0, 'm': 1.725}"
    ]
