--- a/index.ipynb
+++ b/index.ipynb
@@ -828,9 +828,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b': 100.0, 'm': 1.5}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "show_starting_line = build_starting_line(show_x_values, show_y_values)\n",
     "show_starting_line"
@@ -838,11 +849,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
+    "trace_show_line = m_b_trace(show_starting_line['m'], show_starting_line['b'], show_x_values, name = 'starting line')"
    ]
   },
   {
@@ -851,7 +862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trace_show_line"
+    "trace_show_line"
    ]
   },
   {
