automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -858,9 +858,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'line function',\n",
+       " 'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 700.0, 550.0, 1000.0]}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trace_show_line"
    ]
@@ -871,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot([comedy_show_trace, trace_show_line])"
+    "plot([comedy_show_trace, trace_show_line])"
    ]
   },
   {
